<resources>
    <string name="app_name">Maramb</string>
    <string name="continuer">Continuer</string>
    <string name="title_carte">Carte</string>
    <string name="title_saisie">Saisie</string>
    <string name="title_ra">RA</string>
    <string name="title_compte">Compte</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_saisie">MainActivity</string>
    <string name="me_localiser">Me localiser</string>
    <string name="saisie_description">Partie saisie de marqueur. Permet de prendre une photo, de la qualifier avec un ou plusieurs marqueurs d\'ambiance et de le localiser.</string>
    <string name="icone_saisie">Icone Saisie</string>
    <string name="icone_carte">Icone carte</string>
    <string name="carte_description">carte</string>
    <string name="icone_ra">Icone RA</string>
    <string name="ra_description">Ra</string>
    <string name="icone_compte">Icone compte</string>
    <string name="compte_description">Compte</string>
    <string name="app_description">"Bienvenue dans l'application Maramb ! "</string>
    <string name="recap">Récapitulatif de mon marqueur</string>

    <string name="other">Valider et saisir une autre ambiance</string>
    <string name="envoyer_marqueur">Envoyer mon marqueur</string>
    <string name="recap_image">Image récapitulatif</string>

    <string name="marqueur_lieu">Lieu du marqueur</string>
    <string name="infosMarqueur">Informations sur le marqueur</string>

    <string name="finmarqueur">Envoi du marqueur réussi !</string>
    <string name="newmarker">Nouveau marqueur</string>
    <string name="takepicture">Prendre une photo</string>
    <string name="saisiemarqueur">Saisie de marqueur d\'ambiance</string>

    <string-array name="marqueurs">
        <item name="agreable">Agréable</item>
        <item name="chaleureux">Chaleureux</item>
        <item name="convivial">Convivial</item>
        <item name="froid">Froid</item>
        <item name="lumineux">Lumineux</item>
        <item name="calme">Calme</item>
        <item name="relaxant">Relaxant</item>
        <item name="joyeux">Joyeux</item>
        <item name="musical">Musical</item>
        <item name="anime">Animé</item>
        <item name="agite">Agité</item>
        <item name="feerique">Féerique</item>
        <item name="bruyant">Bruyant</item>
        <item name="degage">Dégagé</item>
        <item name="dangeureux">Dangeureux</item>
        <item name="frequente">Frequente</item>
        <item name="populaire">Populaire</item>
        <item name="chic">Chic</item>
        <item name="desert">Désert</item>
    </string-array>

    <string name="connexion_nomUtilisateur">Nom d\'utilisateur</string>
    <string name="connexion_mdp">Mot de passe</string>
    <string name="connexion_connexion">Connexion</string>
    <string name="connexion_nouvCompte">Créer un compte</string>
    <string name="connexion_textIdentifiants">Identifiants</string>
    <string name="connexion_prenom">Prénom</string>
    <string name="connexion_nom">Nom</string>
    <string name="connexion_informations">Informations</string>
    <string name="connexion_numTel">Numéro de téléphone</string>
    <string name="connexion_msg_succes">Connexion réussie !</string>
    <string name="connexion_msg_echec">Echec de la connexion</string>
    <string name="creer_compte_confmdp">Confirmation mot de passe</string>
    <string name="creer_compte_error_mdp">Vous avez entré deux mots de passe différents !</string>
    <string name="creer_compte_error_used_tel">Ce numéro de téléphone est déjà utilisé.</string>
    <string name="creer_compte_error_used_id">Cet identifiant existe déjà.</string>
    <string name="creer_compte_error_used_mail">Cette adresse mail est déjà utilisée.</string>
    <string name="creer_compte_error_mail">L\'adresse mail est incorrecte.</string>
    <string name="creer_compte_error_tel">Le numéro de téléphone est incorrect.</string>
    <string name="creer_compte_validation">Le compte est créée !</string>
    <string name="creer_compte_errorbdd">Erreur : l\'écriture en base de donnée a échoué.</string>
    <string name="creer_compte_email">Email</string>
    <string name="connexion_contact">Contact</string>
</resources>